Fixed a bug affecting modal height and width on small screen sizes. Updated the README.

--- a/src/presentation/assets/css/modal.css
+++ b/src/presentation/assets/css/modal.css
@@ -4,10 +4,10 @@
   @apply fixed inset-0 bg-black/75 flex items-center justify-center z-50 p-4 backdrop-blur-sm;
 
   .modal-content {
-    @apply transform flex flex-col justify-center items-center gap-6 overflow-hidden rounded-[1rem] text-left shadow-xl transition-all bg-white p-5 h-[80%] w-fit duration-300;
+    @apply transform flex flex-col justify-center items-center gap-6 overflow-hidden rounded-[1rem] text-left shadow-xl transition-all bg-white p-5 h-auto sm:h-[80%] w-fit duration-300;
   
     img {
-      @apply w-auto h-[95%] rounded-[1rem]
+      @apply w-full sm:w-auto h-auto sm:h-[95%] rounded-[1rem]
     }
     
     button {
